maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:28: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^Escaper:28: warning: enclosing method isDirectionFree has result type Unit: return value discarded
    return true
    ^Escaper:30: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Escaper:30: warning: enclosing method isDirectionFree has result type Unit: return value discarded
  return false
  ^Escaper:36: error: type mismatch;
 found   : Unit
 required: Boolean
    if (isDirectionFree(Direction.NORD)) {
                       ^